Modifications to run pre & post installation

--- a/Scanner/Config/db.conf
+++ b/Scanner/Config/db.conf
@@ -1,7 +1,7 @@
 db::1::name      = scanner
 db::1::db_type   = Pg
-db::1::host      = 10.255.4.251
-#db::1::host      = an-m01
+#db::1::host      = 10.255.4.251
+db::1::host      = an-m01
 db::1::port      = 5432
 db::1::user      = alteeve
 db::1::password  = alteeve
