modify db tables names\nUse conf files to specify tables.

--- a/Scanner/Config/ipmi.conf
+++ b/Scanner/Config/ipmi.conf
@@ -9,6 +9,34 @@ name = ipmi
 
 # Agent metadata
 #
+ipmi::db::table::summary         = ipmi_temperatures
+ipmi::db::table::Ambient         = ipmi_temperatures
+ipmi::db::table::Systemboard     = ipmi_temperatures
+ipmi::db::table::VR CPU1         = ipmi_temperatures
+ipmi::db::table::VR MEM AB       = ipmi_temperatures
+ipmi::db::table::VR MEM CD       = ipmi_temperatures
+ipmi::db::table::VR CPU2         = ipmi_temperatures
+ipmi::db::table::VR MEM EF       = ipmi_temperatures
+ipmi::db::table::VR MEM GH       = ipmi_temperatures
+ipmi::db::table::CPU1            = ipmi_temperatures
+ipmi::db::table::CPU2            = ipmi_temperatures
+ipmi::db::table::MEM A           = ipmi_temperatures
+ipmi::db::table::MEM B           = ipmi_temperatures
+ipmi::db::table::MEM C           = ipmi_temperatures
+ipmi::db::table::MEM D           = ipmi_temperatures
+ipmi::db::table::MEM E           = ipmi_temperatures
+ipmi::db::table::MEM F           = ipmi_temperatures
+ipmi::db::table::MEM G           = ipmi_temperatures
+ipmi::db::table::MEM H           = ipmi_temperatures
+ipmi::db::table::PSU1 Inlet      = ipmi_temperatures
+ipmi::db::table::PSU2 Inlet      = ipmi_temperatures
+ipmi::db::table::PSU1            = ipmi_temperatures
+ipmi::db::table::PSU2            = ipmi_temperatures
+ipmi::db::table::BBU             = ipmi_temperatures
+ipmi::db::table::RAID Controller = ipmi_temperatures
+
+ipmi::db::table::alerts          = alerts
+
 ipmi::host  = an-c07n01.alteeve.ca
 ipmi::ip    = 10.255.4.251
 ipmi::type  = server node
@@ -16,6 +44,7 @@ ipmi::query = wipmi
 
 # specifications for the various attributes
 #
+
 ipmi::summary::max        = 100
 ipmi::summary::ok_min     = 0
 ipmi::summary::ok_max     = 0
