--- a/Scanner/Config/scanner.conf
+++ b/Scanner/Config/scanner.conf
@@ -9,6 +9,8 @@ name = scanner
 
 # Agent metadata
 #
+scanner::db::table::alerts = alerts
+
 scanner::host       = an-c07n01.alteeve.ca
 scanner::ip         = 10.255.4.251
 scanner::type       = scanner core
