--- a/Scanner/Config/snmp_apc_ups.conf
+++ b/Scanner/Config/snmp_apc_ups.conf
@@ -28,6 +28,23 @@ name = snmp
 
 # Agent metadata
 #
+snmp::db::table::battery capacity          = snmp_apc_ups
+snmp::db::table::battery temperature       = snmp_apc_ups
+snmp::db::table::battery runtime remaining = snmp_apc_ups
+snmp::db::table::battery replace           = snmp_apc_ups
+snmp::db::table::input voltage             = snmp_apc_ups
+snmp::db::table::input frequency           = snmp_apc_ups
+snmp::db::table::reason for last transfer  = snmp_apc_ups
+snmp::db::table::output voltage            = snmp_apc_ups
+snmp::db::table::output frequency          = snmp_apc_ups
+snmp::db::table::output load               = snmp_apc_ups
+snmp::db::table::output current            = snmp_apc_ups
+snmp::db::table::comms                     = snmp_apc_ups
+snmp::db::table::last self test result     = snmp_apc_ups
+snmp::db::table::last self test date       = snmp_apc_ups
+snmp::db::table::other                     = snmp_apc_ups
+snmp::db::table::alerts                    = alerts
+
 snmp::1::name      = an-u01
 snmp::1::type      = APC UPS
 snmp::1::ip        = 10.20.3.251
