--- a/Scanner/Config/raid.conf
+++ b/Scanner/Config/raid.conf
@@ -9,6 +9,10 @@ name = raid
 
 # Agent metadata
 #
+raid::db::table::ROC temperature   = raid_controllers
+raid::db::table::Drive Temperature = raid_drives
+raid::db::table::alerts            = alerts
+
 raid::host  = an-c07n01.alteeve.ca
 raid::ip    = 10.255.4.251
 raid::type  = RAID subsystem
