finalized module and db table name  mods

--- a/Scanner/Config/ipmi.conf
+++ b/Scanner/Config/ipmi.conf
@@ -34,6 +34,8 @@ ipmi::db::table::PSU1            = ipmi_temperatures
 ipmi::db::table::PSU2            = ipmi_temperatures
 ipmi::db::table::BBU             = ipmi_temperatures
 ipmi::db::table::RAID Controller = ipmi_temperatures
+ipmi::db::table::summary         = ipmi_temperatures
+ipmi::db::table::other           = ipmi_temperatures
 
 ipmi::db::table::alerts          = alerts
 
