--- a/Scanner/Config/raid.conf
+++ b/Scanner/Config/raid.conf
@@ -11,6 +11,8 @@ name = raid
 #
 raid::db::table::ROC temperature   = raid_controllers
 raid::db::table::Drive Temperature = raid_drives
+raid::db::table::summary           = raid_controllers
+raid::db::table::other 		   = raid_controllers
 raid::db::table::alerts            = alerts
 
 raid::host  = an-c07n01.alteeve.ca
