Report based on healthiest of UPSes
Added 'compare' property to some config fields, to use 'best' value
from each of multiple sources: longest battery life  remaining, or
lowest temperature. Process and summarize, add to sumweight if needed.

--- a/Scanner/Config/snmp_apc_ups.conf
+++ b/Scanner/Config/snmp_apc_ups.conf
@@ -93,6 +93,7 @@ snmp::global::battery capacity::crisis_min = 1
 snmp::global::battery capacity::crisis_max = 10
 snmp::global::battery capacity::hysteresis = 1
 snmp::global::battery capacity::weight     = 1
+snmp::global::battery capacity::compare    = greater
 
 # http://koninkx.net/index.php/howtos/snmp/8-usefull-oids-for-apc says
 # this can be F or C depending on configuration, but APC MIB file says
@@ -109,6 +110,7 @@ snmp::global::battery temperature::crisis_min = 25
 snmp::global::battery temperature::crisis_max = 60
 snmp::global::battery temperature::hysteresis = 1
 snmp::global::battery temperature::weight     = 1
+snmp::global::battery temperature::compare    = lesser
 
 snmp::global::battery runtime remaining::units      = minutes?
 snmp::global::battery runtime remaining::min        = 0
@@ -121,6 +123,7 @@ snmp::global::battery runtime remaining::crisis_min = 1
 snmp::global::battery runtime remaining::crisis_max = 10
 snmp::global::battery runtime remaining::hysteresis = 1
 snmp::global::battery runtime remaining::weight     = 1
+snmp::global::battery runtime remaining::compare    = greater
 
 snmp::global::battery replace::values::1        = unneeded
 snmp::global::battery replace::values::2        = needed
