--- a/Scanner/Config/scanner.conf
+++ b/Scanner/Config/scanner.conf
@@ -14,8 +14,8 @@ scanner::db::table::alerts = alerts
 scanner::host       = an-c07n01.alteeve.ca
 scanner::ip         = 10.255.4.251
 scanner::type       = scanner core
-scanner::healthfile = /shared/status/an-c07n01
-scanner::shutdown   = /var/www/tools/safe-anvil-shutdown 
+scanner::healthfile = /shared/status/.an-c07n01
+scanner::shutdown   = /var/www/tools/wshutdown 
 
 # How important are the various agents in determining a shutdown?
 #
