Simplify config boundary variables.

--- a/Scanner/Config/raid.conf
+++ b/Scanner/Config/raid.conf
@@ -23,31 +23,19 @@ raid::query = wstorcli
 # specifications for the summary data & various attributes
 #
 raid::summary::max        = 100
-raid::summary::ok_min     = 0
-raid::summary::ok_max     = 0
-raid::summary::warn_min   = 1
-raid::summary::warn_max   = 5
-raid::summary::crisis_min = 5
-raid::summary::crisis_max = 100
+raid::summary::ok         = 1
+raid::summary::warn       = 5
 raid::summary::hysteresis = 0
 
 
-raid::Drive Temperature::ok_min     =  20
-raid::Drive Temperature::ok_max     =  40
-raid::Drive Temperature::warn_min   =  40
-raid::Drive Temperature::warn_max   =  50
-raid::Drive Temperature::crisis_min =  50
-raid::Drive Temperature::crisis_max =  70
+raid::Drive Temperature::ok         =  40
+raid::Drive Temperature::warn       =  50
 raid::Drive Temperature::hysteresis =   1
 raid::Drive Temperature::units      = degrees C
 
 
-raid::ROC temperature::ok_min     =  20
-raid::ROC temperature::ok_max     =  60
-raid::ROC temperature::warn_min   =  60
-raid::ROC temperature::warn_max   = 70
-raid::ROC temperature::crisis_min = 70
-raid::ROC temperature::crisis_max = 150
+raid::ROC temperature::ok         =  70
+raid::ROC temperature::warn       =  90
 raid::ROC temperature::hysteresis =   1
 raid::ROC temperature::units      = degrees C
 
