--- a/Scanner/Config/scanner.conf
+++ b/Scanner/Config/scanner.conf
@@ -20,20 +20,16 @@ scanner::shutdown   = /var/www/tools/wshutdown
 # How important are the various agents in determining a shutdown?
 #
 scanner::weight::snmp_apc_ups = 1
-scanner::weight::ipmi = 1
-scanner::weight::raid = 1
+scanner::weight::ipmi         = 1
+scanner::weight::raid         = 1
 
 
 
 # specifications for the summary data & various attributes
 #
-scanner::summary::max        = 100
-scanner::summary::ok_min     = 0
-scanner::summary::ok_max     = 0
-scanner::summary::warn_min   = 1
-scanner::summary::warn_max   = 5
-scanner::summary::crisis_min = 5
-scanner::summary::crisis_max = 100
+scanner::summary::max  = 100
+scanner::summary::ok   = 1
+scanner::summary::warn = 5
 
 
 
