--- a/Scanner/Config/ipmi.conf
+++ b/Scanner/Config/ipmi.conf
@@ -48,229 +48,129 @@ ipmi::query = wipmi
 #
 
 ipmi::summary::max        = 100
-ipmi::summary::ok_min     = 0
-ipmi::summary::ok_max     = 0
-ipmi::summary::warn_min   = 1
-ipmi::summary::warn_max   = 5
-ipmi::summary::crisis_min = 5
-ipmi::summary::crisis_max = 100
+ipmi::summary::ok         = 1
+ipmi::summary::warn       = 5
 ipmi::summary::hysteresis = 0
 
 
-ipmi::Ambient::ok_min     = 20
-ipmi::Ambient::ok_max     = 45
-ipmi::Ambient::warn_min   = 45
-ipmi::Ambient::warn_max   = 55
-ipmi::Ambient::crisis_min = 55
-ipmi::Ambient::crisis_max = 60
+ipmi::Ambient::ok         = 45
+ipmi::Ambient::warn       = 55
 ipmi::Ambient::hysteresis = 1
 ipmi::Ambient::units      = degrees C
 
-ipmi::Systemboard::ok_min     = 20
-ipmi::Systemboard::ok_max     = 45
-ipmi::Systemboard::warn_min   = 45
-ipmi::Systemboard::warn_max   = 55
-ipmi::Systemboard::crisis_min = 55
-ipmi::Systemboard::crisis_max = 60
+ipmi::Systemboard::ok         = 45
+ipmi::Systemboard::warn       = 55
 ipmi::Systemboard::hysteresis = 1
 ipmi::Systemboard::units      = degrees C
 
-ipmi::VR CPU1::ok_min     = 20
-ipmi::VR CPU1::ok_max     = 45
-ipmi::VR CPU1::warn_min   = 45
-ipmi::VR CPU1::warn_max   = 55
-ipmi::VR CPU1::crisis_min = 55
-ipmi::VR CPU1::crisis_max = 60
+ipmi::VR CPU1::ok         = 45
+ipmi::VR CPU1::warn       = 55
 ipmi::VR CPU1::hysteresis =  1
 ipmi::VR CPU1::units      = degrees C
 
-ipmi::VR MEM AB::ok_min     = 20
-ipmi::VR MEM AB::ok_max     = 45
-ipmi::VR MEM AB::warn_min   = 45
-ipmi::VR MEM AB::warn_max   = 55
-ipmi::VR MEM AB::crisis_min = 55
-ipmi::VR MEM AB::crisis_max = 60
+ipmi::VR MEM AB::ok         = 45
+ipmi::VR MEM AB::warn       = 55
 ipmi::VR MEM AB::hysteresis =  1
 ipmi::VR MEM AB::units      = degrees C
 
-ipmi::VR MEM CD::ok_min     = 20
-ipmi::VR MEM CD::ok_max     = 45
-ipmi::VR MEM CD::warn_min   = 45
-ipmi::VR MEM CD::warn_max   = 55
-ipmi::VR MEM CD::crisis_min = 55
-ipmi::VR MEM CD::crisis_max = 60
+ipmi::VR MEM CD::ok         = 45
+ipmi::VR MEM CD::warn       = 55
 ipmi::VR MEM CD::hysteresis = 1
-ipmi::VR MEM CD::units     = degrees C
+ipmi::VR MEM CD::units      = degrees C
 
-ipmi::VR CPU2::ok_min     = 20
-ipmi::VR CPU2::ok_max     = 45
-ipmi::VR CPU2::warn_min   = 45
-ipmi::VR CPU2::warn_max   = 55
-ipmi::VR CPU2::crisis_min = 55
-ipmi::VR CPU2::crisis_max = 60
+ipmi::VR CPU2::ok         = 45
+ipmi::VR CPU2::warn       = 55
 ipmi::VR CPU2::hysteresis =  1
 ipmi::VR CPU2::units      = degrees C
 
-ipmi::VR MEM EF::ok_min     = 20
-ipmi::VR MEM EF::ok_max     = 45
-ipmi::VR MEM EF::warn_min   = 45
-ipmi::VR MEM EF::warn_max   = 55
-ipmi::VR MEM EF::crisis_min = 55
-ipmi::VR MEM EF::crisis_max = 60
+ipmi::VR MEM EF::ok         = 45
+ipmi::VR MEM EF::warn       = 55
 ipmi::VR MEM EF::hysteresis =  1
 ipmi::VR MEM EF::units      = degrees C
 
-ipmi::VR MEM GH::ok_min     = 20
-ipmi::VR MEM GH::ok_max     = 45
-ipmi::VR MEM GH::warn_min   = 45
-ipmi::VR MEM GH::warn_max   = 55
-ipmi::VR MEM GH::crisis_min = 55
-ipmi::VR MEM GH::crisis_max = 60
+ipmi::VR MEM GH::ok         = 45
+ipmi::VR MEM GH::warn       = 55
 ipmi::VR MEM GH::hysteresis =  1
 ipmi::VR MEM GH::units      = degrees C
 
-ipmi::CPU1::ok_min     = 20
-ipmi::CPU1::ok_max     = 45
-ipmi::CPU1::warn_min   = 45
-ipmi::CPU1::warn_max   = 55
-ipmi::CPU1::crisis_min = 55
-ipmi::CPU1::crisis_max = 60
+ipmi::CPU1::ok         = 45
+ipmi::CPU1::warn       = 55
 ipmi::CPU1::hysteresis =  1
-ipmi::CPU1::units     = degrees C
+ipmi::CPU1::units      = degrees C
 
-ipmi::CPU2::ok_min     = 20
-ipmi::CPU2::ok_max     = 45
-ipmi::CPU2::warn_min   = 45
-ipmi::CPU2::warn_max   = 55
-ipmi::CPU2::crisis_min = 55
-ipmi::CPU2::crisis_max = 60
+ipmi::CPU2::ok         = 45
+ipmi::CPU2::warn       = 55
 ipmi::CPU2::hysteresis =  1
-ipmi::CPU2::units     = degrees C
+ipmi::CPU2::units      = degrees C
 
-ipmi::MEM A::ok_min     = 20
-ipmi::MEM A::ok_max     = 45
-ipmi::MEM A::warn_min   = 45
-ipmi::MEM A::warn_max   = 55
-ipmi::MEM A::crisis_min = 55
-ipmi::MEM A::crisis_max = 60
+ipmi::MEM A::ok         = 45
+ipmi::MEM A::warn       = 55
 ipmi::MEM A::hysteresis =  1
-ipmi::MEM A::units     = degrees C
+ipmi::MEM A::units      = degrees C
 
-ipmi::MEM B::ok_min     = 20
-ipmi::MEM B::ok_max     = 45
-ipmi::MEM B::warn_min   = 45
-ipmi::MEM B::warn_max   = 55
-ipmi::MEM B::crisis_min = 55
-ipmi::MEM B::crisis_max = 60
+ipmi::MEM B::ok         = 45
+ipmi::MEM B::warn       = 55
 ipmi::MEM B::hysteresis =  1
-ipmi::MEM B::units     = degrees C
+ipmi::MEM B::units      = degrees C
 
-ipmi::MEM C::ok_min     = 20
-ipmi::MEM C::ok_max     = 45
-ipmi::MEM C::warn_min   = 45
-ipmi::MEM C::warn_max   = 55
-ipmi::MEM C::crisis_min = 55
-ipmi::MEM C::crisis_max = 60
+ipmi::MEM C::ok         = 45
+ipmi::MEM C::warn       = 55
 ipmi::MEM C::hysteresis =  1
-ipmi::MEM C::units     = degrees C
+ipmi::MEM C::units      = degrees C
 
-ipmi::MEM D::ok_min     = 20
-ipmi::MEM D::ok_max     = 45
-ipmi::MEM D::warn_min   = 45
-ipmi::MEM D::warn_max   = 55
-ipmi::MEM D::crisis_min = 55
-ipmi::MEM D::crisis_max = 60
+ipmi::MEM D::ok         = 45
+ipmi::MEM D::warn       = 55
 ipmi::MEM D::hysteresis =  1
-ipmi::MEM D::units     = degrees C
+ipmi::MEM D::units      = degrees C
 
-ipmi::MEM E::ok_min     = 20
-ipmi::MEM E::ok_max     = 45
-ipmi::MEM E::warn_min   = 45
-ipmi::MEM E::warn_max   = 55
-ipmi::MEM E::crisis_min = 55
-ipmi::MEM E::crisis_max = 60
+ipmi::MEM E::ok         = 45
+ipmi::MEM E::warn       = 55
 ipmi::MEM E::hysteresis =  1
-ipmi::MEM E::units     = degrees C
+ipmi::MEM E::units      = degrees C
 
-ipmi::MEM F::ok_min     = 20
-ipmi::MEM F::ok_max     = 45
-ipmi::MEM F::warn_min   = 45
-ipmi::MEM F::warn_max   = 55
-ipmi::MEM F::crisis_min = 55
-ipmi::MEM F::crisis_max = 60
+ipmi::MEM F::ok         = 45
+ipmi::MEM F::warn       = 55
 ipmi::MEM F::hysteresis =  1
-ipmi::MEM F::units     = degrees C
+ipmi::MEM F::units      = degrees C
 
-ipmi::MEM G::ok_min     = 20
-ipmi::MEM G::ok_max     = 45
-ipmi::MEM G::warn_min   = 45
-ipmi::MEM G::warn_max   = 55
-ipmi::MEM G::crisis_min = 55
-ipmi::MEM G::crisis_max = 60
+ipmi::MEM G::ok         = 45
+ipmi::MEM G::warn       = 55
 ipmi::MEM G::hysteresis =  1
-ipmi::MEM G::units     = degrees C
+ipmi::MEM G::units      = degrees C
 
-ipmi::MEM H::ok_min     = 20
-ipmi::MEM H::ok_max     = 45
-ipmi::MEM H::warn_min   = 45
-ipmi::MEM H::warn_max   = 55
-ipmi::MEM H::crisis_min = 55
-ipmi::MEM H::crisis_max = 60
+ipmi::MEM H::ok         = 45
+ipmi::MEM H::warn       = 55
 ipmi::MEM H::hysteresis =  1
-ipmi::MEM H::units     = degrees C
+ipmi::MEM H::units      = degrees C
 
-ipmi::PSU1 Inlet::ok_min     = 20
-ipmi::PSU1 Inlet::ok_max     = 45
-ipmi::PSU1 Inlet::warn_min   = 45
-ipmi::PSU1 Inlet::warn_max   = 55
-ipmi::PSU1 Inlet::crisis_min = 55
-ipmi::PSU1 Inlet::crisis_max = 60
+ipmi::PSU1 Inlet::ok         = 45
+ipmi::PSU1 Inlet::warn       = 55
 ipmi::PSU1 Inlet::hysteresis =  1
-ipmi::PSU1 Inlet::units     = degrees C
+ipmi::PSU1 Inlet::units      = degrees C
 
-ipmi::PSU2 Inlet::ok_min     = 20
-ipmi::PSU2 Inlet::ok_max     = 45
-ipmi::PSU2 Inlet::warn_min   = 45
-ipmi::PSU2 Inlet::warn_max   = 55
-ipmi::PSU2 Inlet::crisis_min = 55
-ipmi::PSU2 Inlet::crisis_max = 60
+ipmi::PSU2 Inlet::ok         = 45
+ipmi::PSU2 Inlet::warn       = 55
 ipmi::PSU2 Inlet::hysteresis =  1
-ipmi::PSU2 Inlet::units     = degrees C
+ipmi::PSU2 Inlet::units      = degrees C
 
-ipmi::PSU1::ok_min     = 20
-ipmi::PSU1::ok_max     = 65
-ipmi::PSU1::warn_min   = 65
-ipmi::PSU1::warn_max   = 75
-ipmi::PSU1::crisis_min = 75
-ipmi::PSU1::crisis_max = 80
+ipmi::PSU1::ok         = 65
+ipmi::PSU1::warn       = 75
 ipmi::PSU1::hysteresis =  1
-ipmi::PSU1::units     = degrees C
+ipmi::PSU1::units      = degrees C
 
-ipmi::PSU2::ok_min     = 20
-ipmi::PSU2::ok_max     = 65
-ipmi::PSU2::warn_min   = 65
-ipmi::PSU2::warn_max   = 75
-ipmi::PSU2::crisis_min = 75
-ipmi::PSU2::crisis_max = 80
+ipmi::PSU2::ok         = 65
+ipmi::PSU2::warn       = 75
 ipmi::PSU2::hysteresis =  1
-ipmi::PSU2::units     = degrees C
+ipmi::PSU2::units      = degrees C
 
-ipmi::BBU::ok_min     = 20
-ipmi::BBU::ok_max     = 45
-ipmi::BBU::warn_min   = 45
-ipmi::BBU::warn_max   = 55
-ipmi::BBU::crisis_min = 55
-ipmi::BBU::crisis_max = 60
+ipmi::BBU::ok         = 45
+ipmi::BBU::warn       = 55
 ipmi::BBU::hysteresis =  1
-ipmi::BBU::units     = degrees C
+ipmi::BBU::units      = degrees C
 
-ipmi::RAID Controller::ok_min     =  20
-ipmi::RAID Controller::ok_max     =  60
-ipmi::RAID Controller::warn_min   =  60
-ipmi::RAID Controller::warn_max   = 70
-ipmi::RAID Controller::crisis_min = 70
-ipmi::RAID Controller::crisis_max = 150
-ipmi::RAID Controller::hysteresis =   1
+ipmi::RAID Controller::ok         = 60
+ipmi::RAID Controller::warn       = 70
+ipmi::RAID Controller::hysteresis =  1
 ipmi::RAID Controller::units      = degrees C
 
 # ----------------------------------------------------------------------
