--- a/Scanner/Config/snmp_apc_ups.conf
+++ b/Scanner/Config/snmp_apc_ups.conf
@@ -58,12 +58,8 @@ snmp::2::community = public
 # specifications for the summary data & various attributes
 #
 snmp::global::summary::max        = 100
-snmp::global::summary::ok_min     = 0
-snmp::global::summary::ok_max     = 0
-snmp::global::summary::warn_min   = 1
-snmp::global::summary::warn_max   = 5
-snmp::global::summary::crisis_min = 5
-snmp::global::summary::crisis_max = 100
+snmp::global::summary::ok         = 1
+snmp::global::summary::warn       = 5
 snmp::global::summary::hysteresis = 0
 
 #snmp::global::oid::ups  type                 = .1.3.6.1.4.1.318.1.1.1.1.1.1.0
@@ -85,12 +81,8 @@ snmp::global::oid::last self test date       = .1.3.6.1.4.1.318.1.1.1.7.2.4.0
 snmp::global::battery capacity::units      = %
 snmp::global::battery capacity::min        = 0
 snmp::global::battery capacity::max        = 100
-snmp::global::battery capacity::ok_min     = 25
-snmp::global::battery capacity::ok_max     = 100
-snmp::global::battery capacity::warn_min   = 10
-snmp::global::battery capacity::warn_max   = 25
-snmp::global::battery capacity::crisis_min = 1
-snmp::global::battery capacity::crisis_max = 10
+snmp::global::battery capacity::ok         = 25
+snmp::global::battery capacity::warn       = 10
 snmp::global::battery capacity::hysteresis = 1
 snmp::global::battery capacity::weight     = 1
 snmp::global::battery capacity::compare    = greater
@@ -102,12 +94,8 @@ snmp::global::battery capacity::compare    = greater
 snmp::global::battery temperature::units      = degrees C
 snmp::global::battery temperature::min        = 0
 snmp::global::battery temperature::max        = 100
-snmp::global::battery temperature::ok_min     = 10
-snmp::global::battery temperature::ok_max     = 20
-snmp::global::battery temperature::warn_min   = 20
-snmp::global::battery temperature::warn_max   = 25
-snmp::global::battery temperature::crisis_min = 25
-snmp::global::battery temperature::crisis_max = 60
+snmp::global::battery temperature::ok         = 20
+snmp::global::battery temperature::warn       = 25
 snmp::global::battery temperature::hysteresis = 1
 snmp::global::battery temperature::weight     = 1
 snmp::global::battery temperature::compare    = lesser
@@ -115,12 +103,8 @@ snmp::global::battery temperature::compare    = lesser
 snmp::global::battery runtime remaining::units      = minutes?
 snmp::global::battery runtime remaining::min        = 0
 snmp::global::battery runtime remaining::max        = 50
-snmp::global::battery runtime remaining::ok_min     = 25
-snmp::global::battery runtime remaining::ok_max     = 50
-snmp::global::battery runtime remaining::warn_min   = 10
-snmp::global::battery runtime remaining::warn_max   = 25
-snmp::global::battery runtime remaining::crisis_min = 1
-snmp::global::battery runtime remaining::crisis_max = 10
+snmp::global::battery runtime remaining::ok         = 20
+snmp::global::battery runtime remaining::warn       = 5
 snmp::global::battery runtime remaining::hysteresis = 1
 snmp::global::battery runtime remaining::weight     = 1
 snmp::global::battery runtime remaining::compare    = greater
@@ -196,24 +180,16 @@ snmp::global::output frequency::weight     = 1
 snmp::global::output load::units      = %
 snmp::global::output load::min        = 0
 snmp::global::output load::max        = 100
-snmp::global::output load::ok_min     = 0
-snmp::global::output load::ok_max     = 75
-snmp::global::output load::warn_min   = 75
-snmp::global::output load::warn_max   = 95
-snmp::global::output load::crisis_min = 95
-snmp::global::output load::crisis_max = 100
+snmp::global::output load::ok         = 75
+snmp::global::output load::warn       = 95
 snmp::global::output load::hysteresis = 1
 snmp::global::output load::weight     = 1
 
 snmp::global::output current::units      = A
 snmp::global::output current::min        = 0
 snmp::global::output current::max        = 5
-snmp::global::output current::ok_min     = 0
-snmp::global::output current::ok_max     = 4
-snmp::global::output current::warn_min   = 4
-snmp::global::output current::warn_max   = 4.7
-snmp::global::output current::crisis_min = 4.7
-snmp::global::output current::crisis_max = 5
+snmp::global::output current::ok         = 4
+snmp::global::output current::warn       = 4.7
 snmp::global::output current::hysteresis = 0.1
 snmp::global::output current::weight     = 1
 
