add shutdown wrapper file to ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,10 @@ Scanner/t/cover_db
 # ignore compiled and object files
 wipmi
 wstorcli
+wshutdown
 Scanner/Src/wipmi.o
 Scanner/Src/wstorcli.o
+Scanner/Src/wshutdown
 
 
 # LSI Raid controller insists on creating log file.
