Agents archive records to file when DB is lost, reload when it returns.

--- a/Scanner/Config/db.conf
+++ b/Scanner/Config/db.conf
@@ -5,3 +5,11 @@ db::1::host      = 10.255.4.251
 db::1::port      = 5432
 db::1::user      = alteeve
 db::1::password  = alteeve
+
+db::2::name      = scanner
+db::2::db_type   = Pg
+db::2::host      = 10.255.4.252
+#db::2::host      = localhost
+db::2::port      = 5432
+db::2::user      = alteeve
+db::2::password  = alteeve
