Ghange msg_tag to message_tag, msg_args to message_arguements.

--- a/Scanner/Config/scanner.conf
+++ b/Scanner/Config/scanner.conf
@@ -17,6 +17,8 @@ scanner::type       = scanner core
 scanner::healthfile = /shared/status/.an-c07n01
 scanner::shutdown   = /var/www/tools/wshutdown 
 
+scanner::ignorefile = node_monitor
+
 # How important are the various agents in determining a shutdown?
 #
 scanner::weight::snmp_apc_ups = 1
