--- a/Scanner/Makefile
+++ b/Scanner/Makefile
@@ -70,9 +70,10 @@ messages:
 
 
 install: wrapper dirs files scanner  $(SHUTDOWN)
-	@if [[ "$(USER)" == "root" ]] ; then		\
+	if [[ "$(USER)" == "root" ]] ; then		\
 	    cp scanner $(BINDIR);			\
             chmod 777 /var/log/striker;			\
+            chmod 777 /shared/status;			\
 	else						\
 	    echo "Need to be root to create wrappers.";	\
 	    echo "run as: sudo make";			\
