Created nodemonitor agent, to restart node if it is down.

--- a/Scanner/Config/dashboard.conf
+++ b/Scanner/Config/dashboard.conf
@@ -19,8 +19,8 @@ dashboard::shutdown   = /var/www/tools/wshutdown
 
 dashboard::node_server::1 = an-a07n01
 
-dashboard::ignorefile = node_monitor
-dashboard::node_server_down_agent = node_monitor
+dashboard::ignorefile = MegaSAS.log nodemonitor
+dashboard::node_server_down_agent = nodemonitor
 
 # How important are the various agents in determining a shutdown?
 #
