--- a/Scanner/Config/scanner.conf
+++ b/Scanner/Config/scanner.conf
@@ -17,7 +17,7 @@ scanner::type       = scanCore
 scanner::healthfile = /shared/status/.an-a07n01
 scanner::shutdown   = /var/www/tools/wshutdown 
 
-scanner::ignorefile = node_monitor
+scanner::ignorefile = MegaSAS.log nodemonitor
 
 # How important are the various agents in determining a shutdown?
 #
