--- a/Scanner/Makefile
+++ b/Scanner/Makefile
@@ -23,9 +23,17 @@ TOOLDIR    = /var/www/tools
 SHAREDDIR  = /shared/status
 
 DIRS       = $(TEXTBASE) $(CONFDIR) $(MSGDIR) $(CODEBASE) $(BINDIR) \
-	     $(AGENTDIR) $(LIBDIR) $(LOGDIR) $(SHAREDDIR)
+	     $(AGENTDIR) $(LIBDIR) $(LOGDIR) $(SHAREDDIR) $(TOOLDIR) 
 
-WRAPPERS   = wipmi wstorcli wfence_ipmilan
+SPECSDIR   = $(HOME)/rpmbuild/SPECS 
+
+SOURCESDIR = $(HOME)/rpmbuild/SOURCES
+
+RPMDIRS    = $(HOME)/rpmbuild/BUILD   $(HOME)/rpmbuild/RPMS \
+             $(SOURCESDIR) $(SPECSDIR) $(HOME)/rpmbuild/SRPMS
+
+
+WRAPPERS   = wipmi wstorcli 
 SHUTDOWN   = wshutdown
 
 wrapper: 
@@ -33,7 +41,10 @@ wrapper:
 
 dirs    : $(DIRS)
 
-$(DIRS)	:
+$(DIRS) :
+	[[ -x $@ ]] || mkdir -p $@
+
+$(RPMDIRS) :
 	[[ -x $@ ]] || mkdir -p $@
 
 files 	: scanner agents libs configs messages $(WRAPPERS) $(SHUTDOWN) wipmi_power
@@ -44,7 +55,7 @@ $(WRAPPERS): wrapper
 	chmod 755  $(BINDIR)/$@;
 	chmod u+s  $(BINDIR)/$@;
 
-$(SHUTDOWN): wrapper
+$(SHUTDOWN): wrapper $(TOOLDIR)
 	cp $@ $(TOOLDIR)
 	chown root:root $(TOOLDIR)/$@; 
 	chmod 755  $(TOOLDIR)/$@;
@@ -90,6 +101,17 @@ distclean: clean
 
 uninstall: clean distclean
 	rm -rf $(TEXTBASE) $(CODEBASE) $(LOGDIR)
+
+RPM: distclean $(RPMDIRS)
+	rm -f scanner.files
+	$ find . -type d                                        \
+		 -name RPMS -o -name cover_db  -prune -o        \
+		 -type f                                        \
+	         -name '*.rpm' -o -name load_rpm_packages.sh -o \
+		 -name '*.c' -prune -o                          \
+                 -print > scanner.files
+	tar -czf $(SOURCESDIR)/scanner.tar.gz .
+	cp SPECS/scanner.spec $(SPECSDIR)
 
 
 # ----------------------------------------------------------------------
