--- a/Scanner/Config/snmp_apc_pdu.conf
+++ b/Scanner/Config/snmp_apc_pdu.conf
@@ -28,7 +28,14 @@ name = snmp
 
 # Agent metadata
 #
-snmp::db::table::outlet_in_use = snmp_apc_ups
+snmp::db::table::outlet_is_on_1 = snmp_apc_ups
+snmp::db::table::outlet_is_on_2 = snmp_apc_ups
+snmp::db::table::outlet_is_on_3 = snmp_apc_ups
+snmp::db::table::outlet_is_on_4 = snmp_apc_ups
+snmp::db::table::outlet_is_on_5 = snmp_apc_ups
+snmp::db::table::outlet_is_on_6 = snmp_apc_ups
+snmp::db::table::outlet_is_on_7 = snmp_apc_ups
+snmp::db::table::outlet_is_on_8 = snmp_apc_ups
 snmp::db::table::alerts        = alerts
 
 snmp::1::name      = an-pdu01
@@ -48,21 +55,76 @@ snmp::global::summary::ok         = 0
 snmp::global::summary::warn       = 4
 snmp::global::summary::hysteresis = 0
 
-snmp::global::oid::outlet_in_use_1 = .1.3.6.1.4.1.318.1.1.4.4.2.1.3.1
-snmp::global::oid::outlet_in_use_2 = .1.3.6.1.4.1.318.1.1.4.4.2.1.3.2
-snmp::global::oid::outlet_in_use_3 = .1.3.6.1.4.1.318.1.1.4.4.2.1.3.3
-snmp::global::oid::outlet_in_use_4 = .1.3.6.1.4.1.318.1.1.4.4.2.1.3.4
-snmp::global::oid::outlet_in_use_5 = .1.3.6.1.4.1.318.1.1.4.4.2.1.3.5
-snmp::global::oid::outlet_in_use_6 = .1.3.6.1.4.1.318.1.1.4.4.2.1.3.6
-snmp::global::oid::outlet_in_use_7 = .1.3.6.1.4.1.318.1.1.4.4.2.1.3.7
-snmp::global::oid::outlet_in_use_8 = .1.3.6.1.4.1.318.1.1.4.4.2.1.3.8
+snmp::global::oid::outlet_is_on_1 = .1.3.6.1.4.1.318.1.1.4.4.2.1.3.1
+snmp::global::oid::outlet_is_on_2 = .1.3.6.1.4.1.318.1.1.4.4.2.1.3.2
+snmp::global::oid::outlet_is_on_3 = .1.3.6.1.4.1.318.1.1.4.4.2.1.3.3
+snmp::global::oid::outlet_is_on_4 = .1.3.6.1.4.1.318.1.1.4.4.2.1.3.4
+snmp::global::oid::outlet_is_on_5 = .1.3.6.1.4.1.318.1.1.4.4.2.1.3.5
+snmp::global::oid::outlet_is_on_6 = .1.3.6.1.4.1.318.1.1.4.4.2.1.3.6
+snmp::global::oid::outlet_is_on_7 = .1.3.6.1.4.1.318.1.1.4.4.2.1.3.7
+snmp::global::oid::outlet_is_on_8 = .1.3.6.1.4.1.318.1.1.4.4.2.1.3.8
 
-snmp::global::oid::outlet_name_1   = .1.3.6.1.4.1.318.1.1.4.4.2.1.4.1
-snmp::global::oid::outlet_name_2   = .1.3.6.1.4.1.318.1.1.4.4.2.1.4.2
-snmp::global::oid::outlet_name_3   = .1.3.6.1.4.1.318.1.1.4.4.2.1.4.3
-snmp::global::oid::outlet_name_4   = .1.3.6.1.4.1.318.1.1.4.4.2.1.4.4
-snmp::global::oid::outlet_name_5   = .1.3.6.1.4.1.318.1.1.4.4.2.1.4.5
-snmp::global::oid::outlet_name_6   = .1.3.6.1.4.1.318.1.1.4.4.2.1.4.6
-snmp::global::oid::outlet_name_7   = .1.3.6.1.4.1.318.1.1.4.4.2.1.4.7
-snmp::global::oid::outlet_name_8   = .1.3.6.1.4.1.318.1.1.4.4.2.1.4.8
+snmp::global::outlet_is_on_1::values::1 = outletOn
+snmp::global::outlet_is_on_1::values::2 = outletOff
+snmp::global::outlet_is_on_1::values::3 = outletReboot
+snmp::global::outlet_is_on_1::values::4 = outletUnknown
+snmp::global::outlet_is_on_1::values::5 = outletOnWithDelay
+snmp::global::outlet_is_on_1::values::6 = outletOffWithDelay
+snmp::global::outlet_is_on_1::values::7 = outletRebootWithDelay
+
+snmp::global::outlet_is_on_2::values::1 = outletOn
+snmp::global::outlet_is_on_2::values::2 = outletOff
+snmp::global::outlet_is_on_2::values::3 = outletReboot
+snmp::global::outlet_is_on_2::values::4 = outletUnknown
+snmp::global::outlet_is_on_2::values::5 = outletOnWithDelay
+snmp::global::outlet_is_on_2::values::6 = outletOffWithDelay
+snmp::global::outlet_is_on_2::values::7 = outletRebootWithDelay
+
+snmp::global::outlet_is_on_3::values::1 = outletOn
+snmp::global::outlet_is_on_3::values::2 = outletOff
+snmp::global::outlet_is_on_3::values::3 = outletReboot
+snmp::global::outlet_is_on_3::values::4 = outletUnknown
+snmp::global::outlet_is_on_3::values::5 = outletOnWithDelay
+snmp::global::outlet_is_on_3::values::6 = outletOffWithDelay
+snmp::global::outlet_is_on_3::values::7 = outletRebootWithDelay
+
+snmp::global::outlet_is_on_4::values::1 = outletOn
+snmp::global::outlet_is_on_4::values::2 = outletOff
+snmp::global::outlet_is_on_4::values::3 = outletReboot
+snmp::global::outlet_is_on_4::values::4 = outletUnknown
+snmp::global::outlet_is_on_4::values::5 = outletOnWithDelay
+snmp::global::outlet_is_on_4::values::6 = outletOffWithDelay
+snmp::global::outlet_is_on_4::values::7 = outletRebootWithDelay
+
+snmp::global::outlet_is_on_5::values::1 = outletOn
+snmp::global::outlet_is_on_5::values::2 = outletOff
+snmp::global::outlet_is_on_5::values::3 = outletReboot
+snmp::global::outlet_is_on_5::values::4 = outletUnknown
+snmp::global::outlet_is_on_5::values::5 = outletOnWithDelay
+snmp::global::outlet_is_on_5::values::6 = outletOffWithDelay
+snmp::global::outlet_is_on_5::values::7 = outletRebootWithDelay
+
+snmp::global::outlet_is_on_6::values::1 = outletOn
+snmp::global::outlet_is_on_6::values::2 = outletOff
+snmp::global::outlet_is_on_6::values::3 = outletReboot
+snmp::global::outlet_is_on_6::values::4 = outletUnknown
+snmp::global::outlet_is_on_6::values::5 = outletOnWithDelay
+snmp::global::outlet_is_on_6::values::6 = outletOffWithDelay
+snmp::global::outlet_is_on_6::values::7 = outletRebootWithDelay
+
+snmp::global::outlet_is_on_7::values::1 = outletOn
+snmp::global::outlet_is_on_7::values::2 = outletOff
+snmp::global::outlet_is_on_7::values::3 = outletReboot
+snmp::global::outlet_is_on_7::values::4 = outletUnknown
+snmp::global::outlet_is_on_7::values::5 = outletOnWithDelay
+snmp::global::outlet_is_on_7::values::6 = outletOffWithDelay
+snmp::global::outlet_is_on_7::values::7 = outletRebootWithDelay
+
+snmp::global::outlet_is_on_8::values::1 = outletOn
+snmp::global::outlet_is_on_8::values::2 = outletOff
+snmp::global::outlet_is_on_8::values::3 = outletReboot
+snmp::global::outlet_is_on_8::values::4 = outletUnknown
+snmp::global::outlet_is_on_8::values::5 = outletOnWithDelay
+snmp::global::outlet_is_on_8::values::6 = outletOffWithDelay
+snmp::global::outlet_is_on_8::values::7 = outletRebootWithDelay
 
