snmp_apc_pdu uses own db table.

--- a/Scanner/Config/snmp_apc_pdu.conf
+++ b/Scanner/Config/snmp_apc_pdu.conf
@@ -17,7 +17,7 @@
 # own definition for snmp::reason for last transfer::values::1 ...
 # Instead of 'No events', it uses 'Nothing happened' ... clearly a
 # meaningless and insignificant difference. But using the debugger, we
-# can display the snmp_apc_ups object and see the separate values.
+# can display the snmp_apc_pdu object and see the separate values.
 #
 
 # Each config file uses a unique prefix for data. Specify what that
@@ -28,14 +28,14 @@ name = snmp
 
 # Agent metadata
 #
-snmp::db::table::outlet_is_on_1 = snmp_apc_ups
-snmp::db::table::outlet_is_on_2 = snmp_apc_ups
-snmp::db::table::outlet_is_on_3 = snmp_apc_ups
-snmp::db::table::outlet_is_on_4 = snmp_apc_ups
-snmp::db::table::outlet_is_on_5 = snmp_apc_ups
-snmp::db::table::outlet_is_on_6 = snmp_apc_ups
-snmp::db::table::outlet_is_on_7 = snmp_apc_ups
-snmp::db::table::outlet_is_on_8 = snmp_apc_ups
+snmp::db::table::outlet_is_on_1 = snmp_apc_pdu
+snmp::db::table::outlet_is_on_2 = snmp_apc_pdu
+snmp::db::table::outlet_is_on_3 = snmp_apc_pdu
+snmp::db::table::outlet_is_on_4 = snmp_apc_pdu
+snmp::db::table::outlet_is_on_5 = snmp_apc_pdu
+snmp::db::table::outlet_is_on_6 = snmp_apc_pdu
+snmp::db::table::outlet_is_on_7 = snmp_apc_pdu
+snmp::db::table::outlet_is_on_8 = snmp_apc_pdu
 snmp::db::table::alerts        = alerts
 
 snmp::1::name      = an-pdu01
