Added snmp_apc_pdu to scanner.conf weights list

--- a/Scanner/Config/scanner.conf
+++ b/Scanner/Config/scanner.conf
@@ -22,6 +22,7 @@ scanner::ignorefile = MegaSAS.log nodemonitor
 # How important are the various agents in determining a shutdown?
 #
 scanner::weight::snmp_apc_ups = 1
+scanner::weight::snmp_apc_pdu = 1
 scanner::weight::ipmi         = 1
 scanner::weight::raid         = 1
 
