Can perform changes, verify results, terminate testing loop

--- a/Scanner/Config/system_check.conf
+++ b/Scanner/Config/system_check.conf
@@ -30,6 +30,13 @@ system_check::summary::ok   = 1
 system_check::summary::warn = 5
 
 
+# Specifications for system check operations
+#
+system_check::check::1::name    = reference
+system_check::check::1::verify  = $self->reference(\@all_alerts);
 
+system_check::check::2::name = exit tests
+system_check::check::2::perform = $self->shutdown('end of tests')
+system_check::check::2::verify  = say "Exiting test loop";
 # ----------------------------------------------------------------------
 # End of file.
