--- a/Scanner/Config/system_check.conf
+++ b/Scanner/Config/system_check.conf
@@ -1,42 +1,39 @@
 # system_check config file
 #
-
-name = system_check
+# Use ''sc' as the name, so the system check tags are brief.
+#
+name = sc
 
 # Agent metadata
 #
-system_check::db::table::alerts = alerts
+#sc::db::table::alerts = alerts
 
-system_check::host       = an-a07n01.alteeve.ca
-system_check::ip         = 10.255.4.251
-system_check::type       = scanCore
-#system_check::healthfile = /shared/status/.an-a07n01
-#system_check::shutdown   = /var/www/tools/wshutdown 
+#sc::host       = an-a07n01.alteeve.ca
+#sc::ip         = 10.255.4.251
+#sc::type       = scanCore
+#sc::healthfile = /shared/status/.an-a07n01
+#sc::shutdown   = /var/www/tools/wshutdown 
 
-system_check::ignorefile = MegaSAS.log nodemonitor
+#sc::ignorefile = MegaSAS.log nodemonitor
 
 # How important are the various agents in determining a shutdown?
 #
-system_check::weight::snmp_apc_ups = 1
-system_check::weight::ipmi         = 1
-system_check::weight::raid         = 1
+#sc::weight::snmp_apc_ups = 1
+#sc::weight::ipmi         = 1
+#sc::weight::raid         = 1
 
 
 
 # specifications for the summary data & various attributes
 #
-system_check::summary::max  = 100
-system_check::summary::ok   = 1
-system_check::summary::warn = 5
+#sc::summary::max  = 100
+#sc::summary::ok   = 1
+#sc::summary::warn = 5
 
+sc::servers::ssh::1 = 10.20.70.1
+sc::servers::ssh::2 = 10.20.70.234
+sc::servers::ipmi::1 = 10.20.70.1
+sc::servers::ipmi::2 = 10.20.70.2
 
-# Specifications for system check operations
-#
-system_check::check::1::name    = reference
-system_check::check::1::verify  = $self->reference(\@all_alerts);
-
-system_check::check::2::name = exit tests
-system_check::check::2::perform = $self->shutdown('end of tests')
-system_check::check::2::verify  = say "Exiting test loop";
 # ----------------------------------------------------------------------
 # End of file.
