progress with system_check

--- a/Scanner/Config/system_check.conf
+++ b/Scanner/Config/system_check.conf
@@ -30,10 +30,8 @@ name = sc
 #sc::summary::ok   = 1
 #sc::summary::warn = 5
 
-sc::servers::ssh::1 = 10.20.70.1
-sc::servers::ssh::2 = 10.20.70.234
-sc::servers::ipmi::1 = 10.20.70.1
-sc::servers::ipmi::2 = 10.20.70.2
+sc::servers::ssh = 10.20.70.1,10.20.70.2
+sc::servers::ipmi = 10.20.71.1,10.20.71.2
 
 # ----------------------------------------------------------------------
 # End of file.
