--- a/Scanner/Config/system_check.conf
+++ b/Scanner/Config/system_check.conf
@@ -33,5 +33,21 @@ name = sc
 sc::servers::ssh = 10.20.70.1,10.20.70.2
 sc::servers::ipmi = 10.20.71.1,10.20.71.2
 
+sc::switch::pw = private
+sc::switch::oid::outlet_status = .1.3.6.1.4.1.318.1.1.4.4.2.1.3
+sc::switch::oid::reboot_delay = .1.3.6.1.4.1.318.1.1.12.3.4.1.1.6
+
+sc::switch::1::psu1::pdu    = an-pdu01.alteeve.ca
+sc::switch::1::psu1::outlet = 3
+
+sc::switch::1::psu2::pdu    = an-pdu02.alteeve.ca
+sc::switch::1::psu2::outlet = 3
+
+sc::switch::2::psu1::pdu    = an-pdu01.alteeve.ca
+sc::switch::2::psu1::outlet = 6
+
+sc::switch::2::psu2::pdu    = an-pdu02.alteeve.ca
+sc::switch::2::psu2::outlet = 6
+
 # ----------------------------------------------------------------------
 # End of file.
