--- a/tools/striker-usb.conf
+++ b/tools/striker-usb.conf
@@ -72,7 +72,15 @@ local::password			=	secret
 # using the luks::<uuid> = <passphrase> format. You can get the UUID of a
 # device with:
 #   cryptsetup luksUUID /dev/sda2
-luks::ddaf4085-20ca-4ffe-85a4-8bd9f39d3e13	=	supersecret
+luks::passphrase				=	supersecret
+
+# If the partition is not 'ext4' or if it's not encrypted, setting this to '1'
+# will cause the drive to be reformatted and encrypted without prompt. If an
+# initialization is 
+luks::force_initialize				=	1
+
+# If the label on the FS has this string/regex, mount, but do not initialize.
+luks::protected_label				=	C*
 
 ### Examples
 #
