--- a/tools/striker-usb.conf
+++ b/tools/striker-usb.conf
@@ -93,10 +93,10 @@ usb::1-3::sshfs::host		=	vm01-foo.alteeve.ca
 usb::1-3::sshfs::user		=	digimer
 usb::1-3::sshfs::password	=	secret
 
-# Front panel, second from left.
+# Front panel, second from left, non-standard port.
 usb::1-1::local_mount		=	/mnt/1-1
 usb::1-1::sshfs::remote_mount	=	/media/an-striker03-1-1
-usb::1-1::sshfs::host		=	vm02-bar.alteeve.ca
+usb::1-1::sshfs::host		=	vm02-bar.alteeve.ca:22000
 usb::1-1::sshfs::user		=	digimer
 usb::1-1::sshfs::password	=	secret
 
