--- a/tools/striker-usb.conf
+++ b/tools/striker-usb.conf
@@ -46,6 +46,36 @@ local::host			=	10.255.4.3
 local::user			=	root
 local::password			=	secret
 
+# It is possible to decrypt LUKS-encrypted partition, provided the LUKS key is
+# provided. At this time, only one global LUKS key is supported. Enter it in
+# the following variable.
+luks::passphrase		=	supersecret
+
+# If the partition is not 'ext4' or if it's not encrypted, setting this to '1'
+# will cause the drive to be reformatted and encrypted without prompt. This
+# should only be enabled in very specific circumstances. If used, be sure to
+# warn users that their drives will be reformatted if they plug them into a
+# managed port and they are not encrupted!
+luks::force_initialize		=	1
+
+# This tells us what file system to create on the decrypted device mapper
+# device after we created the LUKS encrypted partition.
+luks::use_filesystem		=	ext4
+
+# Set this below if you want to define a specific label when formatting a newly
+# encrypted device with the filesystem set above. If your selected filesystem
+# doesn't support labels, leave this blank.
+luks::fs_label			=	c0
+
+# If the 'force_initialize' option is enabled, you can use this option to
+# selectively block the forced reformatting based on the label of the drive.
+# This can be a static name or a basic regular expression. If the value ends
+# in '*', then a label will be considered a match if the start of the string
+# matches the value to the left of the '*' here. The string *is* case 
+# sensitive.
+luks::protected_label		=	c*
+
+
 # Local directory to mount the inserted device on. If the specified directory
 # does exit, it will be created. If multiple partitions exist on the inserted
 # USB drive, the first partition will mount with the given name and each
@@ -67,20 +97,6 @@ local::password			=	secret
 #
 #usb::X-Y::sshfs::remote_mount	=	/media/an-striker03-1-1
 # 
-
-# For block devices that are LUKS encypted, you can specify the passphrase
-# using the luks::<uuid> = <passphrase> format. You can get the UUID of a
-# device with:
-#   cryptsetup luksUUID /dev/sda2
-luks::passphrase				=	supersecret
-
-# If the partition is not 'ext4' or if it's not encrypted, setting this to '1'
-# will cause the drive to be reformatted and encrypted without prompt. If an
-# initialization is 
-luks::force_initialize				=	1
-
-# If the label on the FS has this string/regex, mount, but do not initialize.
-luks::protected_label				=	C*
 
 ### Examples
 #
