--- a/Scanner/Config/db.conf
+++ b/Scanner/Config/db.conf
@@ -3,13 +3,13 @@ db::1::db_type   = Pg
 db::1::host      = 10.255.4.251
 #db::1::host      = localhost
 db::1::port      = 5432
-db::1::user      = alteeve
-db::1::password  = alteeve
+db::1::user      = striker
+db::1::password  = striker
 
 db::2::name      = scanner
 db::2::db_type   = Pg
 db::2::host      = 10.255.4.252
 #db::2::host      = localhost
 db::2::port      = 5432
-db::2::user      = alteeve
-db::2::password  = alteeve
+db::2::user      = striker
+db::2::password  = striker
