update (install): install SQL files.

--- a/Scanner/Makefile
+++ b/Scanner/Makefile
@@ -17,6 +17,7 @@ SYSTEMNAME = striker
 TEXTBASE   = $(PREFIX)/etc/$(SYSTEMNAME)
 CONFDIR    = $(TEXTBASE)/Config
 MSGDIR     = $(TEXTBASE)/Messages
+SQLDIR     = $(TEXTBASE)/SQL
 
 CODEBASE   = $(PREFIX)/usr/share/$(SYSTEMNAME)
 BINDIR     = $(CODEBASE)/bin
@@ -28,7 +29,7 @@ TOOLDIR    = $(PREFIX)/var/www/tools
 SHAREDDIR  = $(PREFIX)/shared/status
 
 DIRS       = $(TEXTBASE) $(CONFDIR) $(MSGDIR) $(CODEBASE) $(BINDIR) \
-	     $(AGENTDIR) $(LIBDIR) $(LOGDIR) $(SHAREDDIR) $(TOOLDIR) 
+	     $(AGENTDIR) $(LIBDIR) $(LOGDIR) $(SHAREDDIR) $(TOOLDIR) $(SQLDIR)
 
 SPECSDIR   = $(HOME)/rpmbuild/SPECS 
 
@@ -44,9 +45,6 @@ SHUTDOWN   = wshutdown
 
 TAR_EXCLUDE = --exclude='*.rpm' --exclude='25-an-screen.t' --exclude='30-an-email.t' --exclude='45-an-listener.t'
 
-USER       = striker
-DB         = scanner
-
 wrapper: 
 	cd Src && $(MAKE) 
 
@@ -61,16 +59,8 @@ $(RPMDIRS) :
 $(RPMBUILD): $(RPMDIRS)
 	[[ -x $@ ]] || mkdir -p $@
 
-files 	: scanner dashboard agents libs configs messages $(WRAPPERS) $(SHUTDOWN) wipmi_power
-
-SQL     : 
-	if [[ -x /usr/bin/postgres ]]; then
-	    psql -U postgres -d template1 -f SQL/00_drop_db.sql
-            for sql in SQL/0[1-9]* ; do
-	        psql -U $USER -d $DB -f SQL/$SQL
-	    done
-	fi
-
+files 	: scanner dashboard agents libs configs messages sqlfiles \
+	  $(WRAPPERS) $(SHUTDOWN) wipmi_power
 
 env:
 	perl -E"say "$_	= $ENV{$_} for sort keys %ENV;" > /tmp/env
@@ -104,6 +94,9 @@ libs	:
 configs	:
 	cp Config/* $(CONFDIR)
 
+sqlfiles :
+	cp SQL/* $(SQLDIR)
+
 messages:
 	cp Messages/* $(MSGDIR)
 
@@ -136,9 +129,9 @@ Scanner.files: $(BINDIR) $(AGENTDIR) $(LIBDIR)
 	@echo "Finally, perform 'make uninstall' to remove"
 	@echo "the installed files."
 	@echo ""
-	find /usr/share/striker/* /etc/striker/Messages \
+	find /usr/share/striker/* /etc/striker/Messages /etc/striker/SQL \
 		-type f   -print 	       | \
-	egrep '/agents/|/bin/|/lib/|/Config/|/Messages/' > Scanner.files
+	egrep '/agents/|/bin/|/lib/|/Config/|/Messages/|/SQL/' > Scanner.files
 	echo "/var/www/tools/wshutdown" >> Scanner.files
 
 RPM: distclean $(RPMDIRS) $(RPMBUILD) Scanner.files
