This commit adds the new tool 'anvil-server-summary' and fixes some bugs with the striker-usb-* tools.
* Added more logging in striker-usb-insert to log read filesystem labels.
* Made it so that, if 'luks::force_initialize' is enabled and an unlocked device has no filesystem, it will be formatted automatically. This required moving the format action to it's own function.
* Changed the mount directory on the target machine to have the filesystem label in it's name to help users identify the source device.
* The tools/anvil-server-summary tool provides a way for a user on a dashboard to get a quick summary of which nodes currently host various servers. It is meant to simplify like for third-party monitoring tools.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/tools/striker-usb.conf
+++ b/tools/striker-usb.conf
@@ -65,7 +65,8 @@ luks::use_filesystem		=	ext4
 # Set this below if you want to define a specific label when formatting a newly
 # encrypted device with the filesystem set above. If your selected filesystem
 # doesn't support labels, leave this blank.
-luks::fs_label			=	c0
+luks::fs_label			=	nc0
+luks::fs_options		=	-L #!variable!fs_label!# 
 
 # If the 'force_initialize' option is enabled, you can use this option to
 # selectively block the forced reformatting based on the label of the drive.
