--- a/Scanner/Config/snmp_apc_ups.conf
+++ b/Scanner/Config/snmp_apc_ups.conf
@@ -78,6 +78,10 @@ snmp::global::oid::comms                     = .1.3.6.1.4.1.318.1.1.1.8.1.0
 snmp::global::oid::last self test result     = .1.3.6.1.4.1.318.1.1.1.7.2.3.0
 snmp::global::oid::last self test date       = .1.3.6.1.4.1.318.1.1.1.7.2.4.0
 
+# Dummy entry so 'last self test daqte' has SOME config file entry.
+#
+snmp::global::last self test date::hysteresis = 0.0
+
 snmp::global::battery capacity::units      = %
 snmp::global::battery capacity::min        = 0
 snmp::global::battery capacity::max        = 100
