support 'systemboard 1/2' in conf. Warn not die if tag missing.

--- a/Scanner/Config/ipmi.conf
+++ b/Scanner/Config/ipmi.conf
@@ -11,7 +11,8 @@ name = ipmi
 #
 ipmi::db::table::summary         = ipmi_temperatures
 ipmi::db::table::Ambient         = ipmi_temperatures
-ipmi::db::table::Systemboard     = ipmi_temperatures
+ipmi::db::table::Systemboard 1   = ipmi_temperatures
+ipmi::db::table::Systemboard 2   = ipmi_temperatures
 ipmi::db::table::VR CPU1         = ipmi_temperatures
 ipmi::db::table::VR MEM AB       = ipmi_temperatures
 ipmi::db::table::VR MEM CD       = ipmi_temperatures
@@ -58,10 +59,15 @@ ipmi::Ambient::warn       = 55
 ipmi::Ambient::hysteresis = 1
 ipmi::Ambient::units      = degrees C
 
-ipmi::Systemboard::ok         = 45
-ipmi::Systemboard::warn       = 55
-ipmi::Systemboard::hysteresis = 1
-ipmi::Systemboard::units      = degrees C
+ipmi::Systemboard 1::ok         = 45
+ipmi::Systemboard 1::warn       = 55
+ipmi::Systemboard 1::hysteresis = 1
+ipmi::Systemboard 1::units      = degrees C
+
+ipmi::Systemboard 2::ok         = 45
+ipmi::Systemboard 2::warn       = 55
+ipmi::Systemboard 2::hysteresis = 1
+ipmi::Systemboard 2::units      = degrees C
 
 ipmi::VR CPU1::ok         = 45
 ipmi::VR CPU1::warn       = 55
