fix (general) fixes from real system installation.

--- a/Scanner/Config/dashboard.conf
+++ b/Scanner/Config/dashboard.conf
@@ -11,15 +11,16 @@ name = dashboard
 #
 dashboard::db::table::alerts = alerts
 
-dashboard::host       = an-a07n02.alteeve.ca
-dashboard::ip         = 10.255.4.251
+dashboard::host       = dashboard1.ccrs.bcn
+dashboard::ip         = 10.20.4.1
 dashboard::type       = dashCore
-dashboard::healthfile = /shared/status/.an-a07n02
-dashboard::shutdown   = /var/www/tools/wshutdown 
+dashboard::healthfile = /shared/status/.dashboard1
+#dashboard::shutdown   = /var/www/tools/wshutdown 
 
-dashboard::node_server::1 = an-a07n01
+dashboard::node_server::1 = node1.ccrs.bcn
+dashboard::node_server::2 = node2.ccrs.bcn
 
-dashboard::ignorefile = MegaSAS.log nodemonitor
+dashboard::ignorefile = MegaSAS.log nodemonitor snmp_apc_pdu snmp_apc_ups snmp_brocade_switch
 dashboard::node_server_down_agent = nodemonitor
 
 # How important are the various agents in determining a shutdown?
