--- a/Scanner/Config/nodemonitor.conf
+++ b/Scanner/Config/nodemonitor.conf
@@ -22,14 +22,14 @@ nodemonitor::max_seconds_for_reboot = 300
 
 # The name of the cluster - needed for fetching 'fence' cache files
 #
-nodemonitor::cluster = an-anvil-07
+nodemonitor::cluster = ccrs
 nodemonitor::striker_cache  = /var/www/home/cache
 
 # Files with information about fencing and re-starting nodes,
 # as well as cached /etc/hosts.
 #
-nodemonitor::fence_cache::an-a07n01 = cache_an-anvil-07_an-a07n01.striker 
-nodemonitor::fence_cache::an-a07n02 = cache_an-anvil-07_an-a07n02.striker 
+nodemonitor::fence_cache::node1 = cache_ccrs_node1.ccrs.bcn.dashboard
+nodemonitor::fence_cache::node2 = cache_ccrs_node2.ccrs.bcn.dashboard 
 
 
 
